your message here here, e.g. updated search bar style

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
       content="Made via create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/iconRobo.png" />
+    <title>Robot Friends</title>
+  </head>
+  <body>
+    
     <div id="root"></div>
 
   </body>
